# xmfract

./: INSTALL  Makefile  Makefile.in  README  Xmfract.ad  acconfig.h  aclocal.m4  config.cache  config.h  config.h.in  config.status  configure  configure.in  install-sh  stamp-h  xmfract.ini
etc/: 001man.par  3d.par  3d3.par  Makefile  Makefile.in  abyss.par  besto.par  bgr.map  bob.par  bob2.par  bob3.par  bob4.par  bob5.par  bob6.par  bob7.par  bp.par  britergb.map  chroma.map  chroma2.map  ckp025.par  ckp050.par  ckp075.par  ckp100.par  ckp125.par  ckp150.par  ckp175.par  ckp200.par  ckp225.par  ckp250.par  ckp375.par  ckp400.par  ckp425.par  ckp450.par  ckp475.par  ckp500.par  cosmic.par  default.map  eggz.par  examples.par  face.par  (+50 more)
help/: Makefile  Makefile.in  help.0  help.1  help.10  help.100  help.101  help.102  help.103  help.104  help.105  help.106  help.107  help.108  help.109  help.11  help.110  help.111  help.112  help.113  help.114  help.115  help.116  help.117  help.118  help.119  help.12  help.120  help.121  help.122  help.123  help.124  help.125  help.126  help.127  help.128  help.129  help.13  help.130  help.131  (+127 more)
lib/: Makefile  Makefile.in  memcmp.c  nbasename.c  strcspn.c  stricmp.c  strspn.c  strstr.c  strtod.c  strtol.c
src/: Makefile  Makefile.in  Xmfract.ad.h  attractor.c  authors_menu.c  basic_opts.c  bifurcation.c  boundary_trace.c  calcfracinit.c  calcfract.c  calcfroth.c  calcmand.c  calcmandfp.c  caution.c  cellular.c  check_mapfile.c  check_tgafile.c  cmd_entry.c  cmdfile.c  coloredit.c  corner_param.c  create_image.c  decoder.c  decomposition.c  diffusion.c  draw_image.c  encoder.c  ext_opts.c  fatal.c  file_menu.c  fill.c  formula.c  formula_params.c  fractal_types.c  fractalp.c  fractals.c  fractype.h  gifview.c  globals.c  globals.h  (+76 more)
